--- a/Frontend - ReactJS/Project-cv-search-frontend/package.json
+++ b/Frontend - ReactJS/Project-cv-search-frontend/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.4",
+    "react-top-loading-bar": "^2.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
